refactor(service): уменьшить транзакции